增加限流器

--- a/实施进度.md
+++ b/实施进度.md
@@ -14,9 +14,15 @@
 - 新增每日扫描与回测核心流程
   - `feature/feature_scan.go`：调度器、榜单筛选、特征采集、T+1 回测、并发采集
   - 加入统一重试与退避（`retry_max`、`retry_backoff_ms`）
+- 加入全局 REST 频控与封禁保护
+  - `feature/api/binance/limiter.go`：统一限速、解析 ban until、自动等待解除
+  - `feature/api/binance/index.go`：所有 REST 调用接入 `withLimiter(...)`
+- 降低扫描突发
+  - `feature/feature_scan.go`：新增 `request_gap_ms`（扫描请求间隔）
 - 配置文件新增扫描参数并启用
   - `conf/app.conf`：新增并启用 `[scan]` 段（默认 enabled=1）
   - `conf/app.conf.example`：新增 `[scan]` 段与重试参数
+  - `conf/app.conf` / `conf/app.conf.example`：新增 `binance::rate_limit_per_min` 与 `scan::request_gap_ms`
 
 ## 已实现的功能点
 - 每日 UTC 00:05 调度执行
@@ -36,10 +42,11 @@
    - `feature_timeseries`
    - `backtest_t1`
 5) 若需手动触发：可临时在 `main.go` 中直接调用 `RunDailyScanPipeline(...)`（尚未提供 CLI）
+6) 观察日志中是否还出现 `code=-1003` 或 `banned until`（应明显减少）
 
 ## 进度状态
-- 当前阶段：核心扫描 + 回测流程已落地，支持自动调度
-- 风险点：首次执行依赖外部 Binance API，若频控严格需调整并发/重试
+- 当前阶段：核心扫描 + 回测流程已落地，支持自动调度；已加入全局限速与 ban 保护
+- 风险点：请求量仍受 TopN/并发/频率影响，必要时进一步调低 `max_workers` 或上调 `request_gap_ms`
 
 ## 仍未完成 / 待做
 - 手动触发入口（CLI 或 HTTP 管理入口）
